exports[`<Header /> render if Head_text is empty 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F78B6D",
      "justifyContent": "center",
      "marginTop": 20
    }
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    lineBreakMode="tail"
    style={
      Object {
        "color": "#ffffff",
        "fontSize": 20,
        "fontWeight": "bold",
        "lineHeight": 30,
        "marginBottom": 10
      }
    }>
    
  </Text>
</View>
`;

exports[`<Header /> render if Head_text not empty 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F78B6D",
      "justifyContent": "center",
      "marginTop": 20
    }
  }>
  <Text
    accessible={true}
    allowFontScaling={true}
    lineBreakMode="tail"
    style={
      Object {
        "color": "#ffffff",
        "fontSize": 20,
        "fontWeight": "bold",
        "lineHeight": 30,
        "marginBottom": 10
      }
    }>
    test
  </Text>
</View>
`;
